docs/Kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mdns
spec: {}
status: {}
