docs/Kubernetes/manifests/cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all"
  namespace: mdns
spec:
  endpointSelector:
    matchLabels:
      app: bonjour
  egress:
  - {}
  ingress:
  - {}
